objects/tffa__FinancialNeedFact__c.object
<CustomObject>
    <description>Characteristics of a financial need, relevant for reporting and analytics. A subset of the actual information contained in a financial need. Comparable to a fact table in a star schema.</description>
    <fields>
        <fullName>tffa__Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial need recommendations (at least one) were accepted.</description>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>The channel through which the financial needs were captured.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related Questionnaire Matrix. Can be used for analyzing the efficacy of the strategy during Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Financial Need Facts</relationshipLabel>
        <relationshipName>FinancialNeedFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client from which the financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device from which financial need was captured. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client from which the financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to FinancialNeed.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Facts</relationshipLabel>
        <relationshipName>Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastSyncedOn__c</fullName>
        <description>The date and time of last synchronization with FinancialNeed record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last synced on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>Financial needs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OutOfSync__c</fullName>
        <description>Indicates if the record is out of sync with the FinancialNeed record.</description>
        <formula>ISNULL( tffa__LastSyncedOn__c )  || tffa__FinancialNeed__r.LastModifiedDate  &gt;  tffa__LastSyncedOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PartyAgeGroup__c</fullName>
        <description>Age group (or bracket) of the party having financial needs.</description>
        <label>Party Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AgeGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the party (having financial needs) in the bank. e.g. CUSTOMER, PROSPECT.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductSegment__c</fullName>
        <description>The product segment for which the need was captured.</description>
        <label>Product segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__QuestionnaireName__c</fullName>
        <description>Name of the questionnaire</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Questionnaire name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Questionnaire, if need questions are derived from a questionnaire.</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Financial Need Facts</relationshipLabel>
        <relationshipName>FinancialNeedFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>Tracks the current state/step of the financial need (analysis).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;IN_PROGRESS&quot;</defaultValue>
        <description>Tracks the current status of the financial need (analysis).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialNeedStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial need was submitted.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Need Fact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Need Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>